; ModuleID = '/home/carl/AnghaBench/redis/src/extr_evict.c_LFUTimeElapsed.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_evict.c_LFUTimeElapsed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @LFUTimeElapsed(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = call i64 (...) @LFUGetTimeInMinutes()
  store i64 %5, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp uge i64 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* %3, align 8
  %12 = sub i64 %10, %11
  store i64 %12, i64* %2, align 8
  br label %18

13:                                               ; preds = %1
  %14 = load i64, i64* %3, align 8
  %15 = sub i64 65535, %14
  %16 = load i64, i64* %4, align 8
  %17 = add i64 %15, %16
  store i64 %17, i64* %2, align 8
  br label %18

18:                                               ; preds = %13, %9
  %19 = load i64, i64* %2, align 8
  ret i64 %19
}

declare dso_local i64 @LFUGetTimeInMinutes(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
